# Selection

./: .gitignore  CMakeLists.txt  Makefile  README.md  RRReml.f90  RRiteration.f90  countNumberLines.f90  dsptrf_Ldet.f90  generationsOrig.f90  getEffects.f90  getZGZMats.f90  ifort.cor  reml_module.f90  restart.sh  selection.proc
cmake/Modules/: SetFortranFlags.cmake
src/bar/: CMakeLists.txt  askFilename.f90  detInv.f90  global_module.f90
src/blup/: BSRibsCalc.f90  CMakeLists.txt  blup.f90  blup_module.f90  calcIbsMat.f90  calculateP.f90  calculateV.f90  getEffects.f90  getVariance.f90  getZGZMats.f90  leastSquare.f90  relationMatrix.f90
src/evolution/: CMakeLists.txt  covariate.f90  evolution_module.f90  getQTLandSNP.f90  initialiseGenotypes.f90  prepareMutRec.f90  sampleGamete.f90  sampleMutation.f90  select.f90  selection.f90  simulatePhenotype.f90  simulateTBV.f90
src/foo/: CMakeLists.txt  RRReml.f90  RRiteration.f90  calculateAImat.f90  calculateLogL.f90  calculateP.f90  calculateV.f90  calculaterhs.f90  constants.f90  getEffects.f90  getZGZMats.f90  reml_module.f90  updatetheta.f90
src/main/: CMakeLists.txt  RRBlup.f90  RRReml.f90  RRiteration.f90  Reml.f90  STBlup.f90  STReml.f90  analysis.f90  blup.f90  doRRBlup.f90  doRRReml.f90  doSTBlup.f90  doSTReml.f90  fixedEff.f90  generations.f90  main.f90  makeListGroup.f90  sample.f90  samplec2.f90  select.f90  selection.f90  testInitGeno.f90
src/math/: CMakeLists.txt  stats.f90
src/quickSort/: CMakeLists.txt  quickSort.f90  sortax_nested.f90
src/reml/: CMakeLists.txt  RRReml.f90  RRiteration.f90  STReml.f90  calculateAImat.f90  calculateLogL.f90  calculateP.f90  calculateV.f90  calculaterhs.f90  getEffects.f90  getZGZMats.f90  reml.f90  reml_module.f90  updatetheta.f90
src/rng/: CMakeLists.txt  choice.f90  gnormal.f90  inormal.f90  poissonProb.f90  rng_module.f90  seeding.f90
src/utils/: CMakeLists.txt  askFilename.f90  constants.f90  countNumberLines.f90  detInv.f90  dunpack.f90  global_module.f90  readData.f90  trace.f90
testdata/: Makefile.old  input1  input2  phen
tests/: input1  input11  input2
